log.txt
[21:52:09|27-12-21] FATAL ERROR: Traceback (most recent call last):
  File "main.py", line 312, in <module>
    exec(code) # запуск всего кода который мы прочитали из файлов
  File "<string>", line 2942
SyntaxError: positional argument follows keyword argument

[13:32:04|28-12-21] FATAL ERROR: Traceback (most recent call last):
  File "main.py", line 312, in <module>
    exec(code) # запуск всего кода который мы прочитали из файлов
  File "<string>", line 2514
SyntaxError: positional argument follows keyword argument

[17:28:04|29-12-21] FATAL ERROR: Traceback (most recent call last):
  File "main.py", line 312, in <module>
    exec(code) # запуск всего кода который мы прочитали из файлов
  File "<string>", line 3416
    get_obj_display('game_settings').scatter_bool:
                                                 ^
SyntaxError: invalid syntax

[18:44:46|29-12-21] FATAL ERROR: Traceback (most recent call last):
  File "main.py", line 312, in <module>
    exec(code) # запуск всего кода который мы прочитали из файлов
  File "<string>", line 1
    def norm_deg(deg);
                     ^
SyntaxError: invalid syntax

[14:08:56|30-12-21] FATAL ERROR: Traceback (most recent call last):
  File "main.py", line 312, in <module>
    exec(code) # запуск всего кода который мы прочитали из файлов
  File "<string>", line 3426
    print(norm_deg(bullet[3],) wind_deg)
                                      ^
SyntaxError: invalid syntax

[20:16:23|30-12-21] FATAL ERROR: Traceback (most recent call last):
  File "main.py", line 312, in <module>
    exec(code) # запуск всего кода который мы прочитали из файлов
  File "<string>", line 3357
    self.trace_image.sprite.x =
                              ^
SyntaxError: invalid syntax

[20:26:37|30-12-21] FATAL ERROR: Traceback (most recent call last):
  File "main.py", line 312, in <module>
    exec(code) # запуск всего кода который мы прочитали из файлов
  File "<string>", line 3034
    if get_obj_display('graphics_settings').draw_shadows
                                                       ^
SyntaxError: invalid syntax

